buildscript {
    repositories {
        mavenCentral()
    }
}

plugins {
    id 'org.springframework.boot' version '2.1.5.RELEASE' apply(false)
    id 'org.beryx.jlink' version '2.10.4' apply(false)
    id 'org.javamodularity.moduleplugin' version '1.5.0' apply(false)
    id 'org.openjfx.javafxplugin' version '0.0.7' apply(false)
}

allprojects {
    group 'com.swsb.rp9'
    version '1.0-SNAPSHOT'

    // intellij fix for resources
    // https://intellij-support.jetbrains.com/hc/en-us/community/posts/360000430279-Can-t-access-resource-with-Java-10
    apply plugin: 'idea'
    idea.module.outputDir file("out/production/classes")
}

subprojects {
    apply plugin: 'java'
    apply plugin: "org.javamodularity.moduleplugin"

    repositories {
        mavenCentral()
    }

    sourceCompatibility = 1.11
    targetCompatibility = 1.11
}
